# rust-app

./: .gitignore  Cargo.toml  DEPLOY.md  DEPLOY_DOCKER.md  DEPLOY_RAILWAY.md  Dockerfile  Dockerfile.alpine  Procfile  README.md  deploy.sh  docker-compose.yml  nginx.conf  railway.json  rust-chat.service
.github/workflows/: auto-deploy-coolify.yml  ci.yml  deploy.yml
src/: main.rs  main.txt  ws_handlers.rs  ws_handlers.txt
static/: index.html  script.js
