[package]
name = "rust_chat"  # <--- CHANGED from "rust_whatsapp_equivalent"
version = "0.1.0"
edition = "2021"
[dependencies]
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
chrono = "0.4"
bcrypt = "0.15"
